# fashionmnist_cnn_example

./: CMakeLists.txt  MNISTConfig.cmake  README.md  main (copy).cpp  main.cpp
